# users_and_posts

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  testing_bot.py
posts/: models.py  serializers.py  views.py
posts/migrations/: 0001_initial.py  0002_initial.py
testing_bot/: likes.py  login.py  posts.py  testing_bot.py  users.py  utils.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_user_last_activity.py
users_and_posts/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
